--- a/resources/assets/sass/contact.scss
+++ b/resources/assets/sass/contact.scss
@@ -21,8 +21,15 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
-    text-align: left;
     margin-bottom: 90px;
+
+    @media #{$bootstrap-xs} {
+      text-align: center;
+    }
+
+    @media #{$bootstrap-sm} {
+      text-align: left;
+    }
   }
 
   .info {
@@ -31,20 +38,24 @@
     font-size: 16px;
     font-weight: 900;
     line-height: 24px;
-    text-align: left;
     margin-bottom: 90px;
+
+    @media #{$bootstrap-xs} {
+      text-align: center;
+    }
+
+    @media #{$bootstrap-sm} {
+      text-align: left;
+    }
   }
 
   .write-btn {
     background-color: #9063a6;
-    width: 175px;
     height: 40px;
     border-radius: 50px;
     margin-bottom: -15px;
     z-index: 2;
-    position: absolute;
     left: 50%;
-    margin-left: -82.5px;
     margin-top: -20px;
     font-family: $font-R-black;
     color: #ffffff;
@@ -53,6 +64,8 @@
     line-height: 15px;
     text-align: center;
     transform: scaleX(1.0001);
+
+    @include contact-write-btn(175px, $bootstrap-sm);
   }
 
   .map {
