--- a/public/css/app.css
+++ b/public/css/app.css
@@ -44,6 +44,32 @@ body {
   @media (min-width: 768px) {
     .navbar-bygimotic .my-navbar {
       width: auto; } }
+  .navbar-bygimotic .rainbow {
+    left: 50%; }
+    @media (max-width: 767px) {
+      .navbar-bygimotic .rainbow {
+        position: absolute;
+        width: 72%;
+        top: -118px;
+        margin-left: -36%; } }
+    @media (min-width: 768px) {
+      .navbar-bygimotic .rainbow {
+        position: absolute;
+        width: 72%;
+        top: -118px;
+        margin-left: -36%; } }
+    @media (min-width: 1200px) {
+      .navbar-bygimotic .rainbow {
+        position: absolute;
+        width: 88%;
+        top: -18.6vh;
+        margin-left: -44%; } }
+    @media (min-width: 1400px) {
+      .navbar-bygimotic .rainbow {
+        position: absolute;
+        width: 1050px;
+        top: -165px;
+        margin-left: -525px; } }
   .navbar-bygimotic .navbar-nav .my-menu {
     box-shadow: 0 0 19px 0 rgba(46, 40, 38, 0.3);
     border-radius: 10px;
@@ -119,26 +145,6 @@ body {
     bottom: 0;
     z-index: 1;
     width: 100%; }
-  #first-screen .rainbow {
-    left: 50%; }
-    @media (max-width: 767px) {
-      #first-screen .rainbow {
-        position: absolute;
-        width: 72%;
-        top: 11vh;
-        margin-left: -36%; } }
-    @media (min-width: 768px) {
-      #first-screen .rainbow {
-        position: absolute;
-        width: 72%;
-        top: 11vh;
-        margin-left: -36%; } }
-    @media (min-width: 1400px) {
-      #first-screen .rainbow {
-        position: absolute;
-        width: 1050px;
-        top: 14vh;
-        margin-left: -525px; } }
   #first-screen .first-cloud {
     position: absolute;
     top: 22%;
@@ -225,19 +231,27 @@ body {
       text-align: center;
       margin-top: 70px; }
     .content .second-block p {
-      margin: 60px 0 70px 0;
       font-size: 16px;
       font-family: "Roboto-Regular";
       color: white;
       line-height: 1.5;
-      text-align: left;
       font-weight: 400; }
+      @media (max-width: 767px) {
+        .content .second-block p {
+          margin: 0 0 70px 0;
+          text-align: center; } }
+      @media (min-width: 768px) {
+        .content .second-block p {
+          margin: 60px 0 70px 0;
+          text-align: left; } }
     .content .second-block .video {
       margin-top: 60px;
       border-radius: 10px;
       width: 100%;
-      height: 23vh;
-      margin-bottom: 70px; }
+      height: 23vh; }
+      @media (max-width: 767px) {
+        .content .second-block .video {
+          margin-bottom: 70px; } }
     .content .second-block .read-all-btn {
       background-color: #ffffff;
       width: 170px;
@@ -301,9 +315,15 @@ footer {
     color: #ffffff;
     font-size: 16px;
     line-height: 24px;
-    text-align: left;
-    font-weight: 300;
-    margin: 40px 0 40px 40px; }
+    font-weight: 300; }
+    @media (max-width: 767px) {
+      footer p {
+        text-align: center;
+        margin: 40px 0 0 0; } }
+    @media (min-width: 768px) {
+      footer p {
+        text-align: left;
+        margin: 40px 0 40px 40px; } }
   footer .right-ft {
     margin: 30px 0 10px 0; }
   footer span {
@@ -311,8 +331,12 @@ footer {
     color: #ffffff;
     font-size: 18px;
     font-weight: 900;
-    line-height: 24px;
-    text-align: left; }
+    line-height: 24px; }
+
+@media (max-width: 767px) {
+  .right-block {
+    text-align: center;
+    margin-bottom: 40px; } }
 
 @media (max-width: 767px) {
   .footer-width {
@@ -347,26 +371,33 @@ footer {
     font-size: 16px;
     font-weight: 400;
     line-height: 30px;
-    text-align: left;
     margin-bottom: 90px; }
+    @media (max-width: 767px) {
+      .contact .text {
+        text-align: center; } }
+    @media (min-width: 768px) {
+      .contact .text {
+        text-align: left; } }
   .contact .info {
     font-family: "Roboto-Black";
     color: #4f5e69;
     font-size: 16px;
     font-weight: 900;
     line-height: 24px;
-    text-align: left;
     margin-bottom: 90px; }
+    @media (max-width: 767px) {
+      .contact .info {
+        text-align: center; } }
+    @media (min-width: 768px) {
+      .contact .info {
+        text-align: left; } }
   .contact .write-btn {
     background-color: #9063a6;
-    width: 175px;
     height: 40px;
     border-radius: 50px;
     margin-bottom: -15px;
     z-index: 2;
-    position: absolute;
     left: 50%;
-    margin-left: -82.5px;
     margin-top: -20px;
     font-family: "Roboto-Black";
     color: #ffffff;
@@ -375,7 +406,10 @@ footer {
     line-height: 15px;
     text-align: center;
     -webkit-transform: scaleX(1.0001);
-    transform: scaleX(1.0001); }
+    transform: scaleX(1.0001);
+    position: absolute;
+    width: 175px;
+    margin-left: -87.5px; }
   .contact .map {
     padding: 0;
     margin-bottom: 90px; }
