--- a/resources/assets/sass/landing.scss
+++ b/resources/assets/sass/landing.scss
@@ -77,13 +77,22 @@
       margin-top: 70px;
     }
     p {
-      margin: 60px 0 70px 0;
+
       font-size: 16px;
       font-family: $font-R-regular;
       color: rgb(255, 255, 255);
       line-height: 1.5;
-      text-align: left;
       font-weight: 400;
+
+      @media #{$bootstrap-xs} {
+        margin: 0 0 70px 0;
+        text-align: center;
+      }
+
+      @media #{$bootstrap-sm} {
+        margin: 60px 0 70px 0;
+        text-align: left;
+      }
     }
 
     .video {
@@ -91,7 +100,9 @@
       border-radius: 10px;
       width: 100%;
       height: 23vh;
-      margin-bottom: 70px;
+      @media #{$bootstrap-xs} {
+        margin-bottom: 70px;
+      }
     }
 
     .read-all-btn {
