--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,105 +13,83 @@
 body {
   background-color: #b6ccff; }
 
-.navbar-bygimotic {
-  border-radius: 10px;
-  border: none;
-  background-color: #ffffff;
-  left: 50%;
-  height: 60px;
-  z-index: 2; }
-  @media (max-width: 767px) {
-    .navbar-bygimotic {
-      position: absolute;
-      width: 76%;
-      top: 30vh;
-      margin-left: -38%; } }
-  @media (min-width: 768px) {
-    .navbar-bygimotic {
-      position: absolute;
-      width: 76%;
-      top: 30vh;
-      margin-left: -38%; } }
-  @media (min-width: 1400px) {
-    .navbar-bygimotic {
-      position: absolute;
-      width: 1175px;
-      top: 30vh;
-      margin-left: -587.5px; } }
-  @media (max-width: 767px) {
-    .navbar-bygimotic .my-navbar {
-      width: auto; } }
-  @media (min-width: 768px) {
-    .navbar-bygimotic .my-navbar {
-      width: auto; } }
-  .navbar-bygimotic .rainbow {
-    left: 50%; }
+.full-navbar {
+  text-align: center;
+  margin-top: 15vh; }
+  .full-navbar .rainbow {
+    left: 50%;
+    max-width: 1175px; }
     @media (max-width: 767px) {
-      .navbar-bygimotic .rainbow {
-        position: absolute;
-        width: 72%;
-        top: -118px;
-        margin-left: -36%; } }
+      .full-navbar .rainbow {
+        width: 65%; } }
     @media (min-width: 768px) {
-      .navbar-bygimotic .rainbow {
-        position: absolute;
-        width: 72%;
-        top: -118px;
-        margin-left: -36%; } }
-    @media (min-width: 1200px) {
-      .navbar-bygimotic .rainbow {
-        position: absolute;
-        width: 88%;
-        top: -18.6vh;
-        margin-left: -44%; } }
-    @media (min-width: 1400px) {
-      .navbar-bygimotic .rainbow {
-        position: absolute;
-        width: 1050px;
-        top: -165px;
-        margin-left: -525px; } }
-  .navbar-bygimotic .navbar-nav .my-menu {
-    box-shadow: 0 0 19px 0 rgba(46, 40, 38, 0.3);
-    border-radius: 10px;
-    background-color: #ffffff;
-    width: 200px;
-    height: 281px;
-    border: none; }
-    .navbar-bygimotic .navbar-nav .my-menu a {
-      font-family: "Roboto-Black";
-      color: #9063a6;
-      font-size: 11px;
-      font-weight: 900;
-      line-height: 20px;
-      text-align: left;
-      text-transform: uppercase;
-      margin-bottom: 14px; }
-    .navbar-bygimotic .navbar-nav .my-menu li {
-      margin: 0; }
-  .navbar-bygimotic .navbar-nav li {
-    font-family: "Roboto-Black"; }
+      .full-navbar .rainbow {
+        width: 120vh; } }
     @media (min-width: 992px) {
-      .navbar-bygimotic .navbar-nav li {
-        margin: 0 15px 0 15px; } }
+      .full-navbar .rainbow {
+        width: 120vh; } }
     @media (min-width: 1200px) {
-      .navbar-bygimotic .navbar-nav li {
-        margin: 0 30px 0 30px; } }
+      .full-navbar .rainbow {
+        width: 125vh; } }
     @media (min-width: 1400px) {
-      .navbar-bygimotic .navbar-nav li {
-        margin: 0 50px 0 50px; } }
-    .navbar-bygimotic .navbar-nav li a {
-      color: #9063a6;
-      font-size: 13.5px;
-      font-weight: 900;
-      text-align: center;
-      -webkit-transform: scaleX(1.0086);
-      transform: scaleX(1.0086);
-      text-transform: uppercase;
-      line-height: 30px; }
-    .navbar-bygimotic .navbar-nav li .orange-btn {
-      color: #ff6a21; }
-    .navbar-bygimotic .navbar-nav li .position-cn {
-      padding-right: 33px; }
+      .full-navbar .rainbow {
+        width: 120vh; } }
+  .full-navbar .navbar-bygimotic {
+    border-radius: 10px;
+    border: none;
+    background-color: #ffffff;
+    height: 60px;
+    z-index: 2;
+    width: 76%;
+    max-width: 1175px; }
+    @media (max-width: 767px) {
+      .full-navbar .navbar-bygimotic .my-navbar {
+        width: auto; } }
+    @media (min-width: 768px) {
+      .full-navbar .navbar-bygimotic .my-navbar {
+        width: auto; } }
+    .full-navbar .navbar-bygimotic .navbar-nav .my-menu {
+      box-shadow: 0 0 19px 0 rgba(46, 40, 38, 0.3);
+      border-radius: 10px;
+      background-color: #ffffff;
+      width: 200px;
+      height: 281px;
+      border: none; }
+      .full-navbar .navbar-bygimotic .navbar-nav .my-menu a {
+        font-family: "Roboto-Black";
+        color: #9063a6;
+        font-size: 11px;
+        font-weight: 900;
+        line-height: 20px;
+        text-align: left;
+        text-transform: uppercase;
+        margin-bottom: 14px; }
+      .full-navbar .navbar-bygimotic .navbar-nav .my-menu li {
+        margin: 0; }
+    .full-navbar .navbar-bygimotic .navbar-nav li {
+      font-family: "Roboto-Black"; }
+      @media (min-width: 992px) {
+        .full-navbar .navbar-bygimotic .navbar-nav li {
+          margin: 0 15px 0 15px; } }
+      @media (min-width: 1200px) {
+        .full-navbar .navbar-bygimotic .navbar-nav li {
+          margin: 0 30px 0 30px; } }
+      @media (min-width: 1400px) {
+        .full-navbar .navbar-bygimotic .navbar-nav li {
+          margin: 0 50px 0 50px; } }
+      .full-navbar .navbar-bygimotic .navbar-nav li a {
+        color: #9063a6;
+        font-size: 13.5px;
+        font-weight: 900;
+        text-align: center;
+        -webkit-transform: scaleX(1.0086);
+        transform: scaleX(1.0086);
+        text-transform: uppercase;
+        line-height: 30px; }
+      .full-navbar .navbar-bygimotic .navbar-nav li .orange-btn {
+        color: #ff6a21; }
+      .full-navbar .navbar-bygimotic .navbar-nav li .position-cn {
+        padding-right: 33px; }
 
 #first-screen {
   height: 100vh; }
@@ -121,9 +99,9 @@ body {
     @media (max-width: 767px) {
       #first-screen .logo {
         position: absolute;
-        width: 218px;
+        width: 110px;
         top: 11vh;
-        margin-left: -109px; } }
+        margin-left: -55px; } }
     @media (min-width: 768px) {
       #first-screen .logo {
         position: absolute;
@@ -136,7 +114,10 @@ body {
         width: 270px;
         top: 10vh;
         margin-left: -135px; } }
-    @media (min-width: 1400px) {
+    @media (max-width: 767px) {
+      #first-screen .logo img {
+        width: 100%; } }
+    @media (min-width: 768px) {
       #first-screen .logo img {
         width: 270px; } }
   #first-screen .houses {
@@ -171,7 +152,7 @@ body {
     width: 6%; }
 
 .content {
-  margin-top: -50vh;
+  margin-top: -90vh;
   margin-bottom: 70px; }
   @media (max-width: 767px) {
     .content .content-width {
@@ -182,7 +163,7 @@ body {
       max-width: 1175px; } }
   @media (min-width: 1400px) {
     .content .content-width {
-      width: 1175px; } }
+      max-width: 1175px; } }
   .content .first-block {
     background-color: #ffffff;
     border-top-left-radius: 15px;
