--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,7 +16,9 @@
 
 $font-R-black: "Roboto-Black";
 $font-R-regular: "Roboto-Regular";
-$white: #ffffff;
+$bg-text-color-1: #ffffff;
+$bg-text-color-2: #9063a6;
+$text-color-1: #4f5e69;
 
 
 body {
