--- a/resources/assets/sass/contact.scss
+++ b/resources/assets/sass/contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  background-color: $white;
+  background-color: $bg-text-color-1;
   border-radius: 15px;
   z-index: 1;
   padding: 0;
@@ -7,7 +7,7 @@
   h2 {
     font-family: $font-R-black;
     color: #9063a6;
-    font-size: 36px;
+    font-size: 2.250em;
     font-weight: 900;
     line-height: 36px;
     text-align: center;
@@ -17,8 +17,8 @@
 
   .text {
     font-family: $font-R-regular;
-    color: #4f5e69;
-    font-size: 16px;
+    color: $text-color-1;
+    font-size: 1em;
     font-weight: 400;
     line-height: 30px;
     margin-bottom: 90px;
@@ -34,8 +34,8 @@
 
   .info {
     font-family: $font-R-black;
-    color: #4f5e69;
-    font-size: 16px;
+    color: $text-color-1;
+    font-size: 1em;
     font-weight: 900;
     line-height: 24px;
     margin-bottom: 90px;
@@ -50,7 +50,7 @@
   }
 
   .write-btn {
-    background-color: #9063a6;
+    background-color: $bg-text-color-2;
     height: 40px;
     border-radius: 50px;
     margin-bottom: -15px;
@@ -58,8 +58,8 @@
     left: 50%;
     margin-top: -20px;
     font-family: $font-R-black;
-    color: #ffffff;
-    font-size: 18.38px;
+    color: $bg-text-color-1;
+    font-size: 1.150em;
     font-weight: 900;
     line-height: 15px;
     text-align: center;
@@ -68,9 +68,15 @@
     @include contact-write-btn(175px, $bootstrap-sm);
   }
 
-  .map {
+  .map-content {
     padding: 0;
     margin-bottom: 90px;
+
+
+    .map {
+      width: 100%;
+      height: 60vh;
+    }
 
     img {
       width: 100%;
