--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,17 +1,269 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
 @font-face {
   font-family: "Roboto-Black";
-  src: url("/fonts/Roboto-Black.ttf");
+  src: url("../fonts/Roboto-Black.ttf");
   font-weight: normal;
   font-style: normal; }
 
 @font-face {
   font-family: "Roboto-Regular";
-  src: url("/fonts/Roboto-Regular.ttf");
+  src: url("../fonts/Roboto-Regular.ttf");
   font-style: normal;
   font-weight: normal; }
 
 body {
   background-color: #b6ccff; }
+
+#page-preloader .cssload-container {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: #b6ccff;
+  z-index: 100500; }
+  #page-preloader .cssload-container .cssload-container1 * {
+    color: black;
+    font-size: 33px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif; }
+  #page-preloader .cssload-container .cssload-container1 {
+    position: fixed;
+    width: 117px;
+    height: 49px;
+    left: 50%;
+    top: 70%;
+    transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%); }
+  #page-preloader .cssload-container .cssload-container1 > div {
+    position: absolute;
+    transform-origin: center;
+    -o-transform-origin: center;
+    -ms-transform-origin: center;
+    -webkit-transform-origin: center;
+    -moz-transform-origin: center; }
+  #page-preloader .cssload-container .cssload-l {
+    left: 8px; }
+  #page-preloader .cssload-container .cssload-i {
+    left: 58px; }
+  #page-preloader .cssload-container .cssload-n {
+    left: 70px; }
+  #page-preloader .cssload-container .cssload-g {
+    left: 97px; }
+  #page-preloader .cssload-container .cssload-square,
+  #page-preloader .cssload-container .cssload-circle,
+  #page-preloader .cssload-container .cssload-triangle {
+    left: 29px; }
+  #page-preloader .cssload-container .cssload-square {
+    background: #75b3d1;
+    width: 23px;
+    height: 23px;
+    left: 31px;
+    top: 12px;
+    transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -o-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -ms-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -webkit-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -moz-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    animation-delay: 2.3s;
+    -o-animation-delay: 2.3s;
+    -ms-animation-delay: 2.3s;
+    -webkit-animation-delay: 2.3s;
+    -moz-animation-delay: 2.3s; }
+  #page-preloader .cssload-container .cssload-circle {
+    background: #81d47d;
+    width: 26px;
+    height: 26px;
+    top: 10px;
+    left: 29px;
+    border-radius: 50%;
+    animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -o-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -ms-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -webkit-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -moz-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    animation-delay: 0s;
+    -o-animation-delay: 0s;
+    -ms-animation-delay: 0s;
+    -webkit-animation-delay: 0s;
+    -moz-animation-delay: 0s; }
+  #page-preloader .cssload-container .cssload-triangle {
+    width: 0;
+    height: 0;
+    left: 29px;
+    top: 11px;
+    border-style: solid;
+    border-width: 0 14.5px 24.1px 14.5px;
+    border-color: transparent transparent #d2798c transparent;
+    transform: scale(0);
+    -o-transform: scale(0);
+    -ms-transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -o-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -ms-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -webkit-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    -moz-animation: cssload-shrinkgrow 3.45s ease-in-out infinite;
+    animation-delay: 1.15s;
+    -o-animation-delay: 1.15s;
+    -ms-animation-delay: 1.15s;
+    -webkit-animation-delay: 1.15s;
+    -moz-animation-delay: 1.15s; }
+
+@keyframes cssload-shrinkgrow {
+  0% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  12.5% {
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  25% {
+    -webkit-transform: scale(1);
+    transform: scale(1); }
+  33% {
+    -webkit-transform: scale(0);
+    transform: scale(0); }
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0); } }
+
+@-ms-keyframes cssload-shrinkgrow {
+  #page-preloader .cssload-container 0% {
+    -ms-transform: scale(0); }
+  #page-preloader .cssload-container 12.5% {
+    -ms-transform: scale(1); }
+  #page-preloader .cssload-container 25% {
+    -ms-transform: scale(1); }
+  #page-preloader .cssload-container 33% {
+    -ms-transform: scale(0); }
+  #page-preloader .cssload-container 100% {
+    -ms-transform: scale(0); } }
+
+@-webkit-keyframes cssload-shrinkgrow {
+  0% {
+    -webkit-transform: scale(0); }
+  12.5% {
+    -webkit-transform: scale(1); }
+  25% {
+    -webkit-transform: scale(1); }
+  33% {
+    -webkit-transform: scale(0); }
+  100% {
+    -webkit-transform: scale(0); } }
+
+#page-preloader .cssload-circle-1 {
+  height: 117px;
+  width: 117px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -54px;
+  margin-top: -54px;
+  background: #612e8d; }
+
+#page-preloader .cssload-circle-2 {
+  height: 97px;
+  width: 97px;
+  background: #c22286; }
+
+#page-preloader .cssload-circle-3 {
+  height: 78px;
+  width: 78px;
+  background: #ea225e; }
+
+#page-preloader .cssload-circle-4 {
+  height: 58px;
+  width: 58px;
+  background: #ed5b35; }
+
+#page-preloader .cssload-circle-5 {
+  height: 39px;
+  width: 39px;
+  background: #f5b52e; }
+
+#page-preloader .cssload-circle-6 {
+  height: 19px;
+  width: 19px;
+  background: #81c540; }
+
+#page-preloader .cssload-circle-7 {
+  height: 10px;
+  width: 10px;
+  background: #00a396; }
+
+#page-preloader .cssload-circle-8 {
+  height: 5px;
+  width: 5px;
+  background: #1674bc; }
+
+#page-preloader .cssload-circle-1,
+#page-preloader .cssload-circle-2,
+#page-preloader .cssload-circle-3,
+#page-preloader .cssload-circle-4,
+#page-preloader .cssload-circle-5,
+#page-preloader .cssload-circle-6,
+#page-preloader .cssload-circle-7,
+#page-preloader .cssload-circle-8 {
+  border-bottom: none;
+  border-radius: 50%;
+  -o-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  -o-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  -ms-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  animation-name: cssload-spin;
+  -o-animation-name: cssload-spin;
+  -ms-animation-name: cssload-spin;
+  -webkit-animation-name: cssload-spin;
+  -moz-animation-name: cssload-spin;
+  animation-duration: 4600ms;
+  -o-animation-duration: 4600ms;
+  -ms-animation-duration: 4600ms;
+  -webkit-animation-duration: 4600ms;
+  -moz-animation-duration: 4600ms;
+  animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  -o-animation-timing-function: linear;
+  -ms-animation-timing-function: linear;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear; }
+
+@keyframes cssload-spin {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
+@-ms-keyframes cssload-spin {
+  #page-preloader from {
+    -ms-transform: rotate(0deg); }
+  #page-preloader to {
+    -ms-transform: rotate(360deg); } }
+
+@-webkit-keyframes cssload-spin {
+  from {
+    -webkit-transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg); } }
 
 .full-navbar {
   text-align: center; }
@@ -150,30 +402,30 @@ body {
     z-index: 1;
     width: 100%; }
   #first-screen .first-cloud {
-    position: absolute;
+    position: fixed;
     top: 12%;
     left: -5%;
     width: 6%;
     opacity: 0; }
   #first-screen .second-cloud {
-    position: absolute;
+    position: fixed;
     top: 6%;
     left: 15%;
     width: 6%;
     opacity: 0; }
   #first-screen .third-cloud {
-    position: absolute;
+    position: fixed;
     left: 48%;
     top: 2%;
     opacity: 0; }
   #first-screen .fourth-cloud {
-    position: absolute;
+    position: fixed;
     right: 10%;
     top: 6%;
     width: 7.5%;
     opacity: 0; }
   #first-screen .fifth-cloud {
-    position: absolute;
+    position: fixed;
     right: -2%;
     top: 17%;
     width: 6%;
